# matome

./: .gitignore  Cargo.toml  PLAN.md  README.md  RESOLUTIONS.md  REVIEW.md  SPEC.md  TODO.md  glossary.example.toml  matome.toml  new-spec-chat.json  new-spec-chat.json:Zone.Identifier
.gsd/: notifications.jsonl
.pi-lens/: turn-state.json
.pi-lens/cache/: jscpd.meta.json  knip.meta.json  rust-rules-v1.json  session-start-guidance.meta.json  todo-baseline.json  todo-baseline.meta.json
examples/: matome.toml.example
src/: cli.rs  config.rs  main.rs
src/agent/: mod.rs  templates.rs  token_counter.rs
src/db/: error.rs  migration.rs  mod.rs  models.rs  search.rs  sqlite.rs
src/examples/: glossary.example.toml  matome.toml.example
src/modes/: agent.rs  mod.rs
src/pipeline/: change_detection.rs  content_hash.rs  crawler.rs  extractor.rs  glossary.rs  mod.rs  translator.rs  tree_inference.rs
src/web/: handlers.rs  mod.rs  templates.rs  tree_nav.rs
templates/: article.html  index.html  search.html
